Minor changes - z-index fix for header

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h2 {
 header {
   position: sticky;
   top: 0;
-  z-index: 1; }
+  z-index: 2; }
 
 .navbar {
   padding: 0px 0px;
